@@ -4,6 +4,7 @@ preserve_hostname: False
 # datasource_list: [ "NoCloud", "OVF", "Ec2" ]
 
 cloud_init_modules:
+ - bootcmd
  - resizefs
  - set_hostname
  - update_hostname
